@@ -8,6 +8,7 @@ import java.util.Set;
 import javax.inject.Inject;
 
 import com.structurizr.model.Component;
+import com.structurizr.model.Container;
 import com.structurizr.model.Element;
 import org.apache.commons.vfs2.FileObject;
 import org.apache.deltaspike.core.api.config.ConfigProperty;
@@ -15,6 +16,7 @@ import org.assertj.core.api.Assertions;
 import org.jboss.weld.junit5.EnableWeld;
 import org.jboss.weld.junit5.WeldInitiator;
 import org.jboss.weld.junit5.WeldSetup;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.ndx.aadarchi.base.AgileArchitectureSection;
 import org.ndx.aadarchi.base.ArchitectureEnhancer;
@@ -28,26 +30,45 @@ import com.structurizr.model.SoftwareSystem;
 
 @EnableWeld
 class SipocEnhancerTest {
-    @WeldSetup
+    private static final String CONNECTS_CENTER_TO_OUTPUT = "connects center to output";
+
+	private static final String CONNECTS_INPUT_TO_CENTER = "connects input to center";
+
+	@WeldSetup
     public WeldInitiator weld = WeldInitiator.performDefaultDiscovery();
 
 	@Inject SipocEnhancer sipocEnhancer;
-
-	@Inject SipocModel sipocModel;
 
 	@Inject ArchitectureEnhancer enhancer;
 	
 	@Inject @ConfigProperty(name=BasePath.NAME, defaultValue = BasePath.VALUE) FileObject basePath;
 
-	@Inject Element element;
+	private SoftwareSystem system;
 
+	private Workspace workspace;
+
+	private Container inputContainer;
+
+	private Container centerContainer;
+
+	private Container outputContainer;
+
+	@BeforeEach
+	void createModel() {
+    	workspace = new Workspace(getClass().getName(), "a test workspace");
+    	system = workspace.getModel().addSoftwareSystem("The system to decorate with maven informations");
+    	inputContainer = system.addContainer("Input container"); inputContainer.setDescription("Input container");
+    	centerContainer = system.addContainer("Center container"); centerContainer.setDescription("Center container");
+    	outputContainer = system.addContainer("Output container"); outputContainer.setDescription("Output container");
+    	
+    	inputContainer.uses(centerContainer, CONNECTS_INPUT_TO_CENTER);
+    	centerContainer.uses(outputContainer, CONNECTS_CENTER_TO_OUTPUT);
+	}
 	@Test
 	void test() {
     	// Given
-    	var w = new Workspace(getClass().getName(), "a test workspace");
-    	SoftwareSystem system = w.getModel().addSoftwareSystem("The system to decorate with maven informations");
 		// When
-		enhancer.enhance(w, Arrays.asList(sipocEnhancer));
+		enhancer.enhance(workspace, Arrays.asList(sipocEnhancer));
 		// Then
 		FileObject outputFolderForSystem = enhancer.getOutputBuilder()
 				.outputFor(AgileArchitectureSection.code, system, sipocEnhancer, OutputBuilder.Format.adoc);
@@ -58,19 +79,22 @@ class SipocEnhancerTest {
 
 	@Test
 	public void can_create_sipoc_model() {
-		Set<String> buildIncomingRelationship = new HashSet<>();
-		Set<String> buildIncomingRelationshipDescription = new HashSet<>();
-		String buildProcessDescription = "Generates SIPOC (suppliers/inputs/process/outputs/consumers) diagrams in an asciidoc table, for each element.";
-		Set<String> buildOutgoingRelationships = new HashSet<>(Arrays.asList("aadarchi-test-utils", "base"));
-		Set<String> buildOutgoingRelationshipDescriptions = new HashSet<>(Arrays.asList("Some test utilities dedicated to the improvement of Aadarchi quality. Mainly contains tools allowing easy injection of Maven properties into tests","Base module defining the various used interfaces, and some very useful implementations"));
+		Set<String> buildIncomingRelationship = Set.of(inputContainer.getDescription());
+		Set<String> buildIncomingRelationshipDescription = Set.of(CONNECTS_INPUT_TO_CENTER);
+		String buildProcessDescription = centerContainer.getDescription();
+		Set<String> buildOutgoingRelationships = Set.of(outputContainer.getDescription());
+		Set<String> buildOutgoingRelationshipDescriptions = Set.of(CONNECTS_CENTER_TO_OUTPUT);
+		
+		// Should the model knowledge be added here by, as an example, setting the model as a parameter here?
+		SipocModel sipocModel = new SipocModel();
 
-		Assertions.assertThat(sipocModel.buildOutgoingRelationships(element)).isEqualTo(buildIncomingRelationship);
-		Assertions.assertThat(sipocModel.buildIncomingRelationshipDescriptions(element)).isEqualTo(buildIncomingRelationshipDescription);
-		Assertions.assertThat(sipocModel.buildProcessDescriptions(element)).isEqualTo(buildIncomingRelationship);
-		Assertions.assertThat(sipocModel.buildOutgoingRelationships(element)).isEqualTo(buildOutgoingRelationships);
-		Assertions.assertThat(sipocModel.buildOutgoingRelationshipDescriptions(element)).isEqualTo(buildOutgoingRelationshipDescriptions);
+		Assertions.assertThat(sipocModel.buildIncomingRelationship(centerContainer)).isEqualTo(buildIncomingRelationship);
+		Assertions.assertThat(sipocModel.buildIncomingRelationshipDescriptions(centerContainer)).isEqualTo(buildIncomingRelationshipDescription);
+		Assertions.assertThat(sipocModel.buildProcessDescriptions(centerContainer)).isEqualTo(buildIncomingRelationship);
+		Assertions.assertThat(sipocModel.buildOutgoingRelationships(centerContainer)).isEqualTo(buildOutgoingRelationships);
+		Assertions.assertThat(sipocModel.buildOutgoingRelationshipDescriptions(centerContainer)).isEqualTo(buildOutgoingRelationshipDescriptions);
 
-		String sipoc = sipocModel.generateSipocDiagram(element);
+		String sipoc = sipocModel.generateSipocDiagram(centerContainer);
 
 		Assertions.assertThat(sipoc).isEqualTo("[cols=\"1,1,1,1,1\"]\n" + "|===\n|Incoming|Input|Process|Output|Outgoing\n\n\n\n\n" + "\n|===" +
 				buildIncomingRelationship +
@@ -83,6 +107,7 @@ class SipocEnhancerTest {
 	@Test
 	public void can_create_a_sipoc_table() {
 		//given
+		// What is this ?
 		class sipocEnhancer extends ModelElementAdapter {
 			@Override
 			public int priority() {
@@ -91,8 +116,8 @@ class SipocEnhancerTest {
 		}
 		//when
 		SipocEnhancer sipocEnhancer = new SipocEnhancer();
-		String sipocEnhancerTable = sipocEnhancer.generateSipocDiagram(element);
-		sipocEnhancer.generateSipocDiagram(element);
+		String sipocEnhancerTable = sipocEnhancer.generateSipocDiagram(centerContainer);
+		sipocEnhancer.generateSipocDiagram(centerContainer);
 		//then
 		Assertions.assertThat(sipocEnhancerTable).isEqualTo("[cols=\"1,1,1,1,1\"]\n" +
 				"|===\n" +
